--- a/src/Osu.Music.UI/Resources/Dictionaries/Defaults.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Defaults.xaml
@@ -71,7 +71,7 @@
                         </Trigger>
 
                         <Trigger SourceName="ScrollBarThumb" Property="IsMouseOver" Value="True">
-                            <Setter TargetName="ScrollBarThumb" Property="Background" Value="Purple"/>
+                            <Setter TargetName="ScrollBarThumb" Property="Background" Value="{DynamicResource SolidColorBrushMain}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
