--- a/src/Osu.Music.UI/Resources/Dictionaries/Buttons.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Buttons.xaml
@@ -208,7 +208,7 @@
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="Purple"/>
+        <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="FontFamily" Value="{DynamicResource MaterialIcons}"/>
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -257,7 +257,7 @@
     <Style x:Key="SidebarToggleButtonBase" TargetType="{x:Type ToggleButton}">
         <Setter Property="Height" Value="40"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="#a374ad"/>
+        <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="FontFamily" Value="{DynamicResource Roboto}"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="14"/>
@@ -271,8 +271,8 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Foreground" Value="Purple"/>
-                            <Setter TargetName="Bd" Property="BorderBrush" Value="Purple"/>
+                            <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
+                            <Setter TargetName="Bd" Property="BorderBrush" Value="{DynamicResource SolidColorBrushMain}"/>
                             <Setter TargetName="Bd" Property="BorderThickness" Value="5 0 0 0"/>
                             <Setter TargetName="Bd" Property="Padding" Value="0 0 0 0"/>
                         </Trigger>
@@ -319,7 +319,7 @@
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Background" Value="Purple"/>
+        <Setter Property="Background" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="Roboto"/>
         <Setter Property="FontWeight" Value="Normal"/>
