Revert "Empty Prefereces View"
This reverts commit 991b4b792e71241a845159e2a68dde9b0fd05ed3.

--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -16,9 +16,9 @@
                 <StackPanel Orientation="Vertical">
                     <Button Style="{DynamicResource PopupButton}" Content="About"/>
                     <Button Style="{DynamicResource PopupButton}" Content="Open folder"/>
-                    <Button Style="{DynamicResource PopupButton}" Content="Preferences" Command="{Binding OpenPreferencesCommand}"/>
+                    <Button Style="{DynamicResource PopupButton}" Content="Settings"/>
                     <Button Style="{DynamicResource PopupButton}" Content="Hotkeys"/>
-                    <Button Style="{DynamicResource PopupButton}" Content="Exit" Command="{Binding ExitCommand}"/>
+                    <Button Style="{DynamicResource PopupButton}" Content="Exit"/>
                 </StackPanel>
             </Border>
         </ControlTemplate>
