--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -2,6 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:vm="clr-namespace:Osu.Music.UI.ViewModels"
                     xmlns:v="clr-namespace:Osu.Music.UI.Views">
+    <DataTemplate DataType="{x:Type vm:AboutViewModel}">
+        <v:AboutView/>
+    </DataTemplate>
     <DataTemplate DataType="{x:Type vm:SongsViewModel}">
         <v:SongsView/>
     </DataTemplate>
