--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -15,25 +15,11 @@
         <ControlTemplate x:Key="PopupTemplate">
             <Border Background="{DynamicResource SolidColorBrushMain}" BorderBrush="Transparent" Padding="0" BorderThickness="0" HorizontalAlignment="Left">
                 <StackPanel Orientation="Vertical">
-                    <Button Style="{DynamicResource PopupButton}" Content="About"/>
-                    <Button Style="{DynamicResource PopupButton}" Content="Open folder"/>
+                    <Button Style="{DynamicResource PopupButton}" Content="About" Command="{Binding OpenPageCommand}" CommandParameter="{Binding Model.AboutPage}"/>
                     <Button Style="{DynamicResource PopupButton}" Content="Settings" Command="{Binding OpenPageCommand}" CommandParameter="{Binding Model.SettingsPage}"/>
-                    <Button Style="{DynamicResource PopupButton}" Content="Exit"/>
+                    <Button Style="{DynamicResource PopupButton}" Content="Exit" Command="{Binding ExitCommand}"/>
                 </StackPanel>
             </Border>
-        </ControlTemplate>
-        <ControlTemplate x:Key="MyControlTemplate" TargetType="ContentControl">
-            <Grid Name="MyControl">
-                <ContentPresenter Content="{TemplateBinding Content}"/>
-                <Popup Name="MyPopup" StaysOpen="True" Placement="Left" HorizontalOffset="-100" VerticalOffset="30">
-                    <ContentControl Template="{StaticResource PopupTemplate}"/>
-                </Popup>
-            </Grid>
-            <ControlTemplate.Triggers>
-                <Trigger SourceName="MyControl" Property="UIElement.IsMouseOver" Value="True">
-                    <Setter TargetName="MyPopup" Property="Popup.IsOpen" Value="True"/>
-                </Trigger>
-            </ControlTemplate.Triggers>
         </ControlTemplate>
     </UserControl.Resources>
     <Grid Background="White">
@@ -54,8 +40,13 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <ContentControl Template="{StaticResource MyControlTemplate}" Margin="13 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button Style="{DynamicResource SidebarButtonOsu}"/>
+            <ContentControl Margin="13 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Grid>
+                    <Button Style="{DynamicResource SidebarButtonOsu}" Command="{Binding ChangePopupStateCommand}" CommandParameter="{Binding ElementName=MenuPopup}"/>
+                    <Popup x:Name="MenuPopup" StaysOpen="False" Placement="Left" HorizontalOffset="-100" VerticalOffset="30">
+                        <ContentControl Template="{StaticResource PopupTemplate}"/>
+                    </Popup>
+                </Grid>
             </ContentControl>
             <StackPanel Grid.Column="1"  HorizontalAlignment="Right" Orientation="Horizontal">
                 <Button Style="{StaticResource TitleBarGitHub}" Command="{Binding OpenGitHubCommand}"/>
@@ -77,7 +68,7 @@
             <Rectangle Fill="{DynamicResource SolidColorBrushMain}" Opacity="0.2" Grid.RowSpan="2"/>
 
             <StackPanel Orientation="Vertical" Margin="0 50 0 0">
-                <ToggleButton Style="{DynamicResource SidebarButtonAllSongs}" IsChecked="True"/>
+                <ToggleButton Style="{DynamicResource SidebarButtonAllSongs}" IsChecked="True" Command="{Binding OpenPageCommand}" CommandParameter="{Binding Model.SongsPage}"/>
                 <ToggleButton Style="{DynamicResource SidebarButtonCollection}" IsEnabled="False"/>
                 <ToggleButton Style="{DynamicResource SidebarButtonPlaylists}" IsEnabled="False"/>
             </StackPanel>
