Basic color change UI

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -6,4 +6,5 @@
     <convert:TimeSpanToStringConverter x:Key="TimeSpanToStringConverter"/>
     <convert:ColorToDarkerShadeConverter x:Key="ColorToDarkerShadeConverter"/>
     <convert:ColorToLighterShadeConverter x:Key="ColorToLighterShadeConverter"/>
+    <convert:ColorStringConverter x:Key="ColorStringConverter"/>
 </ResourceDictionary>
