--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -7,4 +7,5 @@
     <convert:ColorToDarkerShadeConverter x:Key="ColorToDarkerShadeConverter"/>
     <convert:ColorToLighterShadeConverter x:Key="ColorToLighterShadeConverter"/>
     <convert:ColorStringConverter x:Key="ColorStringConverter"/>
+    <convert:HotkeyTypeToStringConverter x:Key="HotkeyTypeToStringConverter"/>
 </ResourceDictionary>
