--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -8,4 +8,5 @@
     <convert:ColorToLighterShadeConverter x:Key="ColorToLighterShadeConverter"/>
     <convert:ColorStringConverter x:Key="ColorStringConverter"/>
     <convert:HotkeyTypeToStringConverter x:Key="HotkeyTypeToStringConverter"/>
+    <convert:SelectedHotkeyToBooleanConverter x:Key="SelectedHotkeyToBooleanConverter"/>
 </ResourceDictionary>
