--- a/src/Osu.Music.UI/Views/SettingsView.xaml
+++ b/src/Osu.Music.UI/Views/SettingsView.xaml
@@ -13,15 +13,15 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <DataTemplate x:Key="HotkeyTemplate" DataType="{x:Type hk:Hotkey}">
-            <uc:HotkeyListItem Margin="0 5 0 5"/>
+            <uc:HotkeyListItem Margin="0 5 0 5" SelectedHotkey="{Binding DataContext.SelectedHotkey, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SettingsView}}}"/>
         </DataTemplate>
     </UserControl.Resources>
     <Grid>
         <ScrollViewer>
             <StackPanel Orientation="Vertical" Margin="5" Width="600">
-                <Label Content="Player Color"/>
+                <TextBlock Text="Player Color" Style="{DynamicResource MenuHeader}"/>
                 <colorpicker:SquarePicker Name="ColorPicker" HorizontalAlignment="Center" Height="150" Width="150" SelectedColor="{Binding DataContext.Settings.MainColor, RelativeSource={RelativeSource FindAncestor, 
-                    AncestorType={x:Type local:MainView}}, Converter={StaticResource ColorStringConverter}}">
+                    AncestorType={x:Type local:MainView}}, Converter={StaticResource ColorStringConverter}}" Margin="0 0 0 50">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="ColorChanged">
                             <prism:InvokeCommandAction Command="{Binding DataContext.UpdateColorCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}"
@@ -30,7 +30,7 @@
                     </i:Interaction.Triggers>
                 </colorpicker:SquarePicker>
 
-                <Label Content="Hotkeys"/>
+                <TextBlock Text="Hotkeys" Style="{DynamicResource MenuHeader}"/>
                 <ItemsControl ItemsSource="{Binding DataContext.HotkeyManager.Hotkeys, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}" ItemTemplate="{StaticResource HotkeyTemplate}"
                               ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
                     <ItemsControl.ItemsPanel>
@@ -41,9 +41,7 @@
 
                     <ItemsControl.Template>
                         <ControlTemplate TargetType="ItemsControl">
-                            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                                <ItemsPresenter/>
-                            </ScrollViewer>
+                            <ItemsPresenter/>
                         </ControlTemplate>
                     </ItemsControl.Template>
                 </ItemsControl>
