--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -9,4 +9,5 @@
     <convert:ColorStringConverter x:Key="ColorStringConverter"/>
     <convert:HotkeyTypeToStringConverter x:Key="HotkeyTypeToStringConverter"/>
     <convert:SelectedHotkeyToBooleanConverter x:Key="SelectedHotkeyToBooleanConverter"/>
+    <convert:KeyCombinationToStringConverter x:Key="KeyCombinationToStringConverter"/>
 </ResourceDictionary>
