--- a/src/Osu.Music.UI/UserControls/HotkeyListItem.xaml
+++ b/src/Osu.Music.UI/UserControls/HotkeyListItem.xaml
@@ -7,15 +7,15 @@
              xmlns:views="clr-namespace:Osu.Music.UI.Views"
              mc:Ignorable="d" Name="HotkeyItem">
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Height="30">
-        <TextBlock Name="LabelName" Width="430" Text="{Binding Type, Converter={StaticResource HotkeyTypeToStringConverter}}" Padding="0 6 0 0"/>
-        <TextBlock Name="LabelHotkey" FontWeight="Bold" Width="140" Height="30" Text="{Binding Combination}" Padding="0 6 0 0"/>
+        <TextBlock Name="LabelName" Width="400" Text="{Binding ElementName=HotkeyItem, Path=Type, Converter={StaticResource HotkeyTypeToStringConverter}}" Padding="0 6 0 0"/>
+        <TextBlock Name="LabelHotkey" FontWeight="Bold" Width="170" Height="30" Text="{Binding ElementName=HotkeyItem, Path=Combination, Converter={StaticResource KeyCombinationToStringConverter}}" Padding="0 6 0 0"/>
         <ToggleButton Name="ButtonEdit" Width="30" Height="30" Style="{DynamicResource HotkeyEditButton}" 
-                      Command="{Binding DataContext.SelectHotkeyCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:SettingsView}}}"
-                      CommandParameter="{Binding ElementName=HotkeyItem}">
+                      Command="{Binding DataContext.HotkeyManager.SetEditedHotkeyCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:MainView}}}"
+                      CommandParameter="{Binding ElementName=HotkeyItem, Path=Type}">
             <ToggleButton.IsChecked>
                 <MultiBinding Converter="{StaticResource SelectedHotkeyToBooleanConverter}" Mode="OneWay">
                     <MultiBinding.Bindings>
-                        <Binding ElementName="HotkeyItem" Path="."/>
+                        <Binding ElementName="HotkeyItem" Path="Type"/>
                         <Binding ElementName="HotkeyItem" Path="SelectedHotkey"/>
                     </MultiBinding.Bindings>
                 </MultiBinding>
