--- a/src/Osu.Music.UI/Views/SettingsView.xaml
+++ b/src/Osu.Music.UI/Views/SettingsView.xaml
@@ -13,7 +13,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <DataTemplate x:Key="HotkeyTemplate" DataType="{x:Type models:Hotkey}">
-            <uc:HotkeyListItem Margin="0 5 0 5" SelectedHotkey="{Binding DataContext.SelectedHotkey, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SettingsView}}}"/>
+            <uc:HotkeyListItem Margin="0 5 0 5" Combination="{Binding Path=Combination}" Type="{Binding Path=Type}"
+                               SelectedHotkey="{Binding DataContext.HotkeyManager.EditedHotkey, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}"/>
         </DataTemplate>
     </UserControl.Resources>
     <Grid>
