--- a/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
@@ -18,4 +18,28 @@
         <Setter Property="Foreground" Value="#424242"/>
         <Setter Property="Margin" Value="0 0 0 20"/>
     </Style>
+
+    <Style x:Key="MenuDefault" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontFamily" Value="Roboto"/>
+    </Style>
+
+    <Style x:Key="LinkText" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+
+        <Setter Property="Foreground" Value="#0366d6"/>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="TextDecorations" Value="Underline"/>
+                <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="LicenseText" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontFamily" Value="Monospace"/>
+        <Setter Property="FontSize" Value="16"/>
+    </Style>
 </ResourceDictionary>
