--- a/src/Osu.Music.UI/Views/AboutView.xaml
+++ b/src/Osu.Music.UI/Views/AboutView.xaml
@@ -6,7 +6,58 @@
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <DataTemplate x:Key="LicenseTemplate">
+            <StackPanel Width="577" Margin="23 0 0 0">
+                <TextBlock Style="{DynamicResource LinkText}" Text="{Binding name}">
+                    <TextBlock.InputBindings>
+                        <MouseBinding MouseAction="LeftClick"
+                                      Command="{Binding DataContext.OpenRepositoryCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AboutView}}}"
+                                      CommandParameter="{Binding repository}"/>
+                    </TextBlock.InputBindings>
+                </TextBlock>
+                <TextBlock Style="{DynamicResource MenuDefault}" Margin="15 10 0 10">
+                    <Run Text="License: "/>
+                    <Run Text="{Binding license}"/>
+                </TextBlock>
+                <TextBlock Style="{DynamicResource LicenseText}" Margin="15 0 0 30" Text="{Binding sourceText}" TextWrapping="Wrap"/>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
-        <Label Content="About"/>
+        <ScrollViewer>
+            <StackPanel Orientation="Vertical" Margin="5" Width="600">
+                <Image Source="/Osu.Music.UI;component/Resources/Images/Logo/Logo.png" Width="100" RenderOptions.BitmapScalingMode="HighQuality"/>
+                <TextBlock Text="osu.Music" Style="{DynamicResource MenuHeader}" HorizontalAlignment="Center" Margin="0"/>
+                <TextBlock Style="{DynamicResource MenuDefault}" HorizontalAlignment="Center" Margin="0 0 0 20"
+                           Text="{Binding DataContext.Version, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AboutView}}}"/>
+                <Expander>
+                    <Expander.Header>
+                        <TextBlock Text="License" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 17 0 0"/>
+                    </Expander.Header>
+                    <TextBlock Style="{DynamicResource LicenseText}" Margin="39 0 0 0" TextWrapping="Wrap"
+                               Text="{Binding DataContext.Licenses.application.sourceText, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AboutView}}}"/>
+                </Expander>
+                <Expander>
+                    <Expander.Header>
+                        <TextBlock Text="Open Source Notices" Style="{DynamicResource MenuHeader}" VerticalAlignment="Center" Padding="0 17 0 0"/>
+                    </Expander.Header>
+                    <ItemsControl ItemsSource="{Binding DataContext.Licenses.notices, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AboutView}}}" ItemTemplate="{StaticResource LicenseTemplate}"
+                              ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+
+                        <ItemsControl.Template>
+                            <ControlTemplate TargetType="ItemsControl">
+                                <ItemsPresenter/>
+                            </ControlTemplate>
+                        </ItemsControl.Template>
+                    </ItemsControl>
+                </Expander>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </UserControl>
