--- a/src/Osu.Music/Views/MainWindow.xaml
+++ b/src/Osu.Music/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         WindowStyle="None"
-        Title="{Binding Title}" Height="550" Width="900" MinHeight="550" MinWidth="900">
+        Title="{Binding Title}" Height="550" Width="900" MinHeight="550" MinWidth="900" Loaded="Window_Loaded">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
