--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+	<a href="{{ site.github.exe_url }}" class="btn">Download .exe</a>
     </header>
 
     <main id="content" class="main-content" role="main">
