--- a/src/Osu.Music.UI/UserControls/SpectrumAnalyzers/DefaultSpectrumVisualizer.xaml
+++ b/src/Osu.Music.UI/UserControls/SpectrumAnalyzers/DefaultSpectrumVisualizer.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl x:Class="Osu.Music.UI.UserControls.SpectrumAnalyzers.DefaultSpectrumVisualizer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Canvas x:Name="canvas" Background="Transparent"/>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Height="250">
+    <Canvas x:Name="canvas" Background="Transparent" Height="80" VerticalAlignment="Bottom"/>
 </UserControl>
