--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:convert="clr-namespace:Osu.Music.UI.Resources.Converters">
     <convert:ReverseVisibilityConverter x:Key="ReverseVisibilityConverter"/>
-    <convert:ProgressToWidthConverter x:Key="ProgressToWidthConverter"/>
+    <convert:ProgressToSizeConverter x:Key="ProgressToSizeConverter"/>
     <convert:TimeSpanToStringConverter x:Key="TimeSpanToStringConverter"/>
     <convert:ColorToDarkerShadeConverter x:Key="ColorToDarkerShadeConverter"/>
     <convert:ColorToLighterShadeConverter x:Key="ColorToLighterShadeConverter"/>
