--- a/src/Osu.Music.UI/SpectrumAnalyzers/CircleSpectrumVisualizer.xaml
+++ b/src/Osu.Music.UI/SpectrumAnalyzers/CircleSpectrumVisualizer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Osu.Music.UI.UserControls.SpectrumAnalyzers.CircleSpectrumVisualizer"
+﻿<UserControl x:Class="Osu.Music.UI.SpectrumAnalyzers.CircleSpectrumVisualizer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Canvas Background="Transparent"/>
